03/30/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Released 0.3 beta

03/29/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated AdapterNode to make some methods private that were accidentally
      marked public

03/23/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Users can no longer remove namespace declarations when there are
      attributes that use it.

03/17/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Altered AdapterNode to support namespaces better. It handles adding and
      removing namespace declarations much better.

03/16/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug with the debug option in logging
    * Added a command line option to enable printing debug to the command line.
    * Fixed a bug in setModel() in XMLDocument

03/13/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Updated the getAdapterNode() method in XMLDocument to check if the
      document is parsed and if not then attempt to go to parsed mode instead of
      simply returning null when in non-parsed mode.

03/09/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Released jsXe 0.3 pre15

03/08/2005  Ian Lewis <IanLewis@member.fsf.org>

    * Added dependency checking for plugins.
    * Added plugin error dialog

03/04/2005  version 0.3 pre15   Ian Lewis <IanLewis@member.fsf.org>

    * Added better error checking when loading plugins.
    * Updated the plugin manager to look nicer. Needs a bit more work though.

03/03/2005  version 0.3 pre14   Ian Lewis <IanLewis@member.fsf.org>

    * Added some changes for dependency tracking of plugins.

03/02/2005  version 0.3 pre13   Ian Lewis <IanLewis@member.fsf.org>

    * Added logging functionality.

03/01/2005  version 0.3 pre12   Ian Lewis <IanLewis@member.fsf.org>

    * Small additions to XMLDocument to prepare for DTD support.
      Nothing to speak of.

02/16/2005  version 0.3 pre11   Ian Lewis <IanLewis@member.fsf.org>

    * jsXe now loads plugins from both ~/.jsxe/jars and the install
      directory.