@@ -848,7 +848,8 @@ public class jsXe {
     
     //{{{ getPluginLoader()
     /**
-     * Gets the loader 
+     * Gets the plugin loader that is used to load
+     * plugins into jsXe
      */
     public static JARClassLoader getPluginLoader() {
         return m_pluginLoader;
